# image-captioning-system

./: .dockerignore  .env.example  .gitignore  .paper-notebook.sha256  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Full_Step-By-Step_Plan__Option_B_.txt  LICENSE  Makefile  README.md  image_captioning.ipynb  pyproject.toml  requirements-dev.txt  requirements-eval.txt  requirements.txt
.github/workflows/: ci.yml  deploy-backend.yml  no-ai-attribution.yml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/schemas/: __init__.py  caption.py
backend/app/services/: __init__.py  predictor_service.py  weights_loader.py
backend/app/tests/: conftest.py  test_captions.py  test_health.py  test_weights_loader.py
backend/app/utils/: __init__.py  image.py
configs/: base.yaml
configs/train/: debug.yaml  stabilized.yaml
docs/: CI.md  EVAL_METHODOLOGY.md  PHASE_0_NOTES.md  PHASE_1_NOTES.md  PHASE_2C_DEPLOYMENT_RUNBOOK.md  STABILIZED_TRAINING_RUNBOOK.md  restructure-plan.md
frontend/: .env.example  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: CaptionResult.jsx  ErrorBanner.jsx  Header.jsx  ImagePreview.jsx  Spinner.jsx  StatusBadge.jsx  UploadZone.jsx
frontend/src/services/: api.js
models/v1.0.0/: vocab.json
notebooks/: 01_ieee_inceptionv3_transformer.ipynb  README.md
results/: history.json
results/stabilized-beam-w4-lp07-rp12/: categories.jsonl  diagnostics.jsonl  metrics.json  metrics_5ref.json  predictions.jsonl  qualitative.jsonl  qualitative_categorized.jsonl  report.md  run_meta.json  verdict.md
results/stabilized-greedy/: diagnostics.jsonl  metrics.json  predictions.jsonl  report.md  run_meta.json
scripts/: __init__.py  bootstrap_dev_artifacts.py  categorize_predictions.py  evaluate.py  inspect_predictions.py  notebook_module_audit.py  predict.py  rescore_nltk_bleu.py  train.py
src/captioning/: __init__.py
src/captioning/config/: __init__.py  loader.py  schema.py
src/captioning/data/: __init__.py  coco.py  pipeline.py  splits.py
src/captioning/evaluation/: __init__.py  benchmark.py  bleu.py  cider.py  inspection.py  meteor.py  rouge.py  runner.py  tokenization.py
src/captioning/inference/: __init__.py  beam.py  greedy.py  image_loader.py  predictor.py
src/captioning/models/: __init__.py  captioning_model.py  embeddings.py  encoder_cnn.py  factory.py  transformer_decoder.py  transformer_encoder.py
src/captioning/preprocessing/: __init__.py  augmentation.py  caption.py  image.py  tokenizer.py
src/captioning/training/: __init__.py  callbacks.py  losses.py  schedules.py  trainer.py
src/captioning/utils/: __init__.py  hashing.py  logging.py  seed.py
tests/: conftest.py
tests/unit/: test_beam_decoder.py  test_caption_preprocessing.py  test_config.py  test_evaluation.py  test_evaluation_metrics.py  test_hashing.py  test_image_preprocessing.py  test_splits.py  test_tokenizer.py  test_training_stability.py
